Correct a little gap on the title slide

--- a/toolchain/themes/neo4j/style/print.less
+++ b/toolchain/themes/neo4j/style/print.less
@@ -15,6 +15,7 @@
         }
         
         section {
+          
           &:first-child, section {
             height: 1080px !important;
             width: 100% !important;
@@ -31,9 +32,10 @@
             }
           }
           
-          &:first-child {
-            margin-top: 0;
-          }
+        }
+        
+        section.title {
+        margin-top: 0 !important;
         }
         
         h3 {
